<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!-- ImageView -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/lenaneo"
            android:contentDescription="@string/lenaneo_logo" />

        <!-- Client Button -->
        <Button
            android:id="@+id/btnClient"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:background="#4d7298"
            android:text="@string/client"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <!-- Admin Button -->
        <Button
            android:id="@+id/btnAdmin"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:background="#4d7298"
            android:text="@string/admin"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
